Use proxito base template for all allauth/socialaccount templates
This uses the entrance/manage base pattern from Allauth to provide two
base templates:

- Any template using base_entrance.html will use the Proxito style base
  template, which drops the header/footer from the application. CSS/JS
  is still used however
- An application styled base_manage.html for pages that are more clearly
  account management templates

In addition, the error base template trims some additional content like
CSS/JS from user hosted content.

--- a/readthedocsext/theme/templates/errors/proxito/base.html
+++ b/readthedocsext/theme/templates/errors/proxito/base.html
@@ -3,6 +3,17 @@
 {% load static from static %}
 {% load trans from i18n %}
 
+{# We still use our CSS on user hosted content #}
+{% block head_links %}
+  {{ block.super }}
+{% endblock head_links %}
+
+{# Remove unwanted JS from user hosted content #}
+{% block head_scripts %}
+{% endblock head_scripts %}
+{% block body_scripts %}
+{% endblock body_scripts %}
+
 {% block content_title_text %}
   {% block error_title %}
     <span class="ui grey text">
