--- a/readthedocsext/theme/templates/errors/proxito/base.html
+++ b/readthedocsext/theme/templates/errors/proxito/base.html
@@ -23,7 +23,7 @@
   {% endblock error_title %}
 {% endblock content_title_text %}
 
-{% block content_text %}
+{% block content_description %}
   <div class="meta">
     {# djlint: off D018 #}
     <a href="/">{{ request.get_host }}</a>
@@ -36,7 +36,7 @@
     {% block error_content_help %}
     {% endblock error_content_help %}
   </div>
-{% endblock content_text %}
+{% endblock content_description %}
 
 {% block content_extra_text %}
   {% block content_extra_link %}
