Rework password reset and lint

--- a/readthedocsext/theme/templates/account/password_reset.html
+++ b/readthedocsext/theme/templates/account/password_reset.html
@@ -1,18 +1,18 @@
 {% extends "account/base_entrance.html" %}
 
-{% load i18n %}
-{% load account %}
-{% load crispy_forms_tags %}
+{% load blocktrans trans from i18n %}
+{% load crispy from crispy_forms_tags %}
 
-{% block head_title %}{% trans "Password reset" %}{% endblock %}
+{% block head_title %}
+  {% trans "Password reset" %}
+{% endblock head_title %}
 
-{% block content %}
+{% block content_title_text %}
+  <i class="fad fa-envelope icon"></i>
+  {% trans "Password reset" %}
+{% endblock content_title_text %}
 
-  <h1 class="ui medium header">
-    <i class="fad fa-envelope icon"></i>
-    {% trans "Password reset" %}
-  </h1>
-
+{% block content_body %}
   {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
   {% endif %}
@@ -25,13 +25,10 @@
   </p>
 
   <form class="ui form"
-        method="POST"
+        method="post"
         action="{% url 'account_reset_password' %}">
     {% csrf_token %}
     {{ form|crispy }}
-    <button class="ui primary button" type="submit">
-      {% trans 'Reset' %}
-    </button>
+    <button class="ui primary button" type="submit">{% trans "Reset" %}</button>
   </form>
-
-{% endblock %}
+{% endblock content_body %}
