--- a/readthedocsext/theme/templates/account/saml.html
+++ b/readthedocsext/theme/templates/account/saml.html
@@ -1,18 +1,20 @@
 {% extends "socialaccount/base_entrance.html" %}
 
-{% load crispy_forms_tags %}
-{% load i18n %}
+{% load crispy from crispy_forms_tags %}
+{% load blocktrans trans from i18n %}
 
 {% block head_title %}
   {% trans "Log in with single sign-on" %}
 {% endblock head_title %}
+{% block content_title_text %}
+  {% trans "Continue with SAML single sign-on" %}
+{% endblock content_title_text %}
 
-{% block content %}
-  <h1 clas="ui medium header">{% trans "Continue with SAML single sign-on" %}</h1>
+{% block content_body %}
   <form class="ui form" method="post" action="{% url "saml_resolve_login" %}">
     {% csrf_token %}
     {{ form|crispy }}
     {{ redirect_field }}
     <button class="ui button" type="submit">{% trans "Continue" %}</button>
   </form>
-{% endblock content %}
+{% endblock content_body %}
