Use proxito base templates for Allauth account/socialaccount templates (#479)
* Use proxito base template for all allauth/socialaccount templates

This uses the entrance/manage base pattern from Allauth to provide two
base templates:

- Any template using base_entrance.html will use the Proxito style base
  template, which drops the header/footer from the application. CSS/JS
  is still used however
- An application styled base_manage.html for pages that are more clearly
  account management templates

In addition, the error base template trims some additional content like
CSS/JS from user hosted content.

* Rework log in template for proxito base

- Fixes issues with login method rendering and wrapping
- Uses base card display instead of custom grid

* Rework base pattern for proxito templates a little

Add another block for card description to base

* Rework password reset and lint

* Add missing password reset done template

* Add missing allauth/account templates, use proxito base

This switches some more of the account templates to use the proxito base
template, and includes some more missing templates from Allauth

--- a/readthedocsext/theme/templates/errors/proxito/base.html
+++ b/readthedocsext/theme/templates/errors/proxito/base.html
@@ -3,6 +3,17 @@
 {% load static from static %}
 {% load trans from i18n %}
 
+{# We still use our CSS on user hosted content #}
+{% block head_links %}
+  {{ block.super }}
+{% endblock head_links %}
+
+{# Remove unwanted JS from user hosted content #}
+{% block head_scripts %}
+{% endblock head_scripts %}
+{% block body_scripts %}
+{% endblock body_scripts %}
+
 {% block content_title_text %}
   {% block error_title %}
     <span class="ui grey text">
@@ -12,7 +23,7 @@
   {% endblock error_title %}
 {% endblock content_title_text %}
 
-{% block content_text %}
+{% block content_description %}
   <div class="meta">
     {# djlint: off D018 #}
     <a href="/">{{ request.get_host }}</a>
@@ -25,7 +36,7 @@
     {% block error_content_help %}
     {% endblock error_content_help %}
   </div>
-{% endblock content_text %}
+{% endblock content_description %}
 
 {% block content_extra_text %}
   {% block content_extra_link %}
