Add templates for Allauth MFA
I placed this as a subpage under the profile "Security" admin dashboard
for now, though this is still not linked anywhere.

The entrance pages use the minimal login base templates, while the
management pages use the user profile edit base as a base template, so
that all of the management functions appear under the user profile
admin.

- Fixes #443

--- a/readthedocsext/theme/templates/account/password_change.html
+++ b/readthedocsext/theme/templates/account/password_change.html
@@ -1,19 +1,25 @@
 {% extends "profiles/base_edit.html" %}
 
-{% load i18n %}
-{% load crispy_forms_tags %}
+{% load trans from i18n %}
+{% load crispy from crispy_forms_tags %}
 
-{% block title %}{% trans "Security" %}{% endblock %}
-{% block profile_admin_change_password %}active{% endblock %}
-{% block edit_content_header %}{% trans "Security" %}{% endblock %}
-{% block edit_content_subheader %}{% trans "Change password" %}{% endblock %}
+{% block title %}
+  {% trans "Security" %}
+{% endblock title %}
+{% block profile_admin_security %}
+  active
+{% endblock profile_admin_security %}
+{% block edit_content_header %}
+  {% trans "Security" %}
+{% endblock edit_content_header %}
+{% block edit_content_subheader %}
+  {% trans "Change password" %}
+{% endblock edit_content_subheader %}
 
 {% block edit_content %}
-  <form method="POST" action="." class="ui form">
+  <form method="post" action="." class="ui form">
     {% csrf_token %}
     {{ form|crispy }}
-    <button class="ui primary button" type="submit">
-      {% trans "Save" %}
-    </button>
+    <button class="ui primary button" type="submit">{% trans "Save" %}</button>
   </form>
-{% endblock %}
+{% endblock edit_content %}
