--- a/readthedocsext/theme/templates/profiles/base_edit.html
+++ b/readthedocsext/theme/templates/profiles/base_edit.html
@@ -1,13 +1,11 @@
 {% extends "base.html" %}
 
-{% load i18n %}
-{% load core_tags %}
+{% load trans from i18n %}
 
 {% block notifications %}
   {# User notifications only #}
-  <readthedocs-notification-list
-    url="{% url "users-notifications-list" request.user.username %}"
-    csrf-token="{{ csrf_token }}">
+  <readthedocs-notification-list url="{% url "users-notifications-list" request.user.username %}"
+                                 csrf-token="{{ csrf_token }}">
   </readthedocs-notification-list>
 
   {{ block.super }}
@@ -18,17 +16,27 @@
     <div class="five wide computer five wide tablet sixteen wide mobile column">
       <div class="ui vertical pointing fluid menu">
         {% block profile-admin-nav %}
-          <a class="item {% block profile_admin_details %}{% endblock %}" href="{% url 'profiles_profile_edit' %}">{% trans "Account" %}</a>
-          <a class="item {% block profile_admin_change_email %}{% endblock %}" href="{% url 'account_email' %}">{% trans "Email addresses" %}</a>
-          <a class="item {% block profile_admin_change_password %}{% endblock %}" href="{% url 'account_change_password' %}">{% trans "Security" %}</a>
-          <a class="item {% block profile_admin_social_accounts %}{% endblock %}" href="{% url 'socialaccount_connections' %}">{% trans "Connected services" %}</a>
-          <a class="item {% block profile-admin-security-log %}{% endblock %}" href="{% url 'profiles_security_log' %}">{% trans "Security log" %}</a>
-          <a class="item {% block profile_admin_tokens %}{% endblock %}" href="{% url 'profiles_tokens' %}">{% trans "API tokens" %}</a>
+          {# djlint: off T003 #}
+          <a class="item {% block profile_admin_details %}{% endblock %}"
+             href="{% url 'profiles_profile_edit' %}">{% trans "Account" %}</a>
+          <a class="item {% block profile_admin_change_email %}{% endblock %}"
+             href="{% url 'account_email' %}">{% trans "Email addresses" %}</a>
+          <a class="item {% block profile_admin_security %}{% endblock %}"
+             href="{% url 'account_change_password' %}">{% trans "Security" %}</a>
+          <a class="item {% block profile_admin_social_accounts %}{% endblock %}"
+             href="{% url 'socialaccount_connections' %}">{% trans "Connected services" %}</a>
+          <a class="item {% block profile-admin-security-log %}{% endblock %}"
+             href="{% url 'profiles_security_log' %}">{% trans "Security log" %}</a>
+          <a class="item {% block profile_admin_tokens %}{% endblock %}"
+             href="{% url 'profiles_tokens' %}">{% trans "API tokens" %}</a>
 
           {% if USE_PROMOS %}
-            <a class="item {% block profile_admin_gold_edit %}{% endblock %}" href="{% url 'gold_detail' %}">{% trans "Gold membership" %}</a>
-            <a class="item {% block profile_admin_advertising %}{% endblock %}" href="{% url 'account_advertising' %}">{% trans "Advertising" %}</a>
+            <a class="item {% block profile_admin_gold_edit %}{% endblock %}"
+               href="{% url 'gold_detail' %}">{% trans "Gold membership" %}</a>
+            <a class="item {% block profile_admin_advertising %}{% endblock %}"
+               href="{% url 'account_advertising' %}">{% trans "Advertising" %}</a>
           {% endif %}
+          {# djlint: on T003 #}
         {% endblock %}
       </div>
 
@@ -37,8 +45,7 @@
         <div class="ui basic segment">
           <h2 class="ui small header">{% trans "Help topics" %}</h2>
           {% block edit_sidebar_help_topics %}
-            <div data-embed-doc-view="{% block edit_sidebar_embed_doc %}{% endblock %}"
-                 data-bind="template: { name: 'doc-topics' }">
+            <div data-embed-doc-view="{% block edit_sidebar_embed_doc %}{% endblock %}" data-bind="template: { name: 'doc-topics' }">
             </div>
           {% endblock edit_sidebar_help_topics %}
         </div>
