Enable Sentry for browser JS
Start logging JS exceptions in Sentry using the @sentry/browser package.

This is not yet logging to Sentry from what I can tell, even with a
valid DSN in there.

--- a/readthedocsext/theme/templates/base.html
+++ b/readthedocsext/theme/templates/base.html
@@ -33,7 +33,8 @@
         {
           "debug": {% debug_enabled as is_debug_enabled %}{{ is_debug_enabled | yesno:"true,false" }},
           "webpack_public_path": "{% get_webpack_static_prefix %}/readthedocsext/theme/",
-          "production_domain": "{{ PRODUCTION_DOMAIN }}"
+          "production_domain": "{{ PRODUCTION_DOMAIN }}",
+          "sentryDsn": ""
         }
       </script>
 
