Teams: use `small` for menu to match other places
I found that we are using `mini` "Teams" listing, but `small` on "Projects"
listing. I'm changing it to `small` in "Teams" for consistency.

Take a look at

* https://app.readthedocs.com/organizations/read-the-docs-qa/teams/
* https://app.readthedocs.com/organizations/read-the-docs-qa/

--- a/readthedocsext/theme/templates/includes/crud/table_list.html
+++ b/readthedocsext/theme/templates/includes/crud/table_list.html
@@ -387,7 +387,7 @@
                 {% block list_item_right_column %}
                   <td class="{% block list_item_right_column_classes %}right aligned collapsing{% endblock %}">
                     {% block list_item_right_menu %}
-                      <div class="ui mini icon buttons">
+                      <div class="ui small icon buttons">
                         {% block list_item_right_buttons %}
                           {% comment %}
                             <a class="ui button">
