--- a/readthedocsext/theme/templates/organizations/settings/security_log.html
+++ b/readthedocsext/theme/templates/organizations/settings/security_log.html
@@ -1,13 +1,17 @@
 {% extends "organizations/settings/base.html" %}
 
-{% load i18n %}
+{% load trans from i18n %}
 
-{% load crispy_forms_tags %}
+{% block title %}
+  {{ organization.name }} - {% trans "Security log" %}
+{% endblock title %}
 
-{% block title %}{{ organization.name }} - {% trans "Security log" %}{% endblock %}
-
-{% block organization_security_log_active %}active{% endblock %}
-{% block organization_edit_content_header %}{% trans "Security log" %}{% endblock %}
+{% block organization_security_log_active %}
+  active
+{% endblock organization_security_log_active %}
+{% block organization_edit_content_header %}
+  {% trans "Security log" %}
+{% endblock organization_edit_content_header %}
 
 {% block organization_edit_sidebar_help_topics %}
   {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/security-log.html#organization-security-log" text=_("Organization security log") is_external=True class="item" %}
@@ -16,7 +20,7 @@
 {% block organization_edit_content %}
   {# Note: this feature is enabled for most modern subscription, but disabled for old subscriptions #}
   {% if not enabled %}
-    {% include 'organizations/includes/feature_disabled.html' with organization=organization %}
+    {% include "organizations/includes/feature_disabled.html" with organization=organization %}
   {% else %}
     {% include "organizations/partials/log_list.html" with objects=object_list omit_user=False %}
   {% endif %}
