--- a/readthedocsext/theme/templates/projects/domain_list.html
+++ b/readthedocsext/theme/templates/projects/domain_list.html
@@ -1,18 +1,24 @@
 {% extends "projects/project_edit_base.html" %}
 
-{% load i18n %}
+{% load trans from i18n %}
 
-{% block title %}{{ project.name }} - {% trans "Domains" %}{% endblock %}
+{% block title %}
+  {{ project.name }} - {% trans "Domains" %}
+{% endblock title %}
 
-{% block project_domains_active %}active{% endblock %}
-{% block project_edit_content_header %}{% trans "Domains" %}{% endblock %}
+{% block project_domains_active %}
+  active
+{% endblock project_domains_active %}
+{% block project_edit_content_header %}
+  {% trans "Domains" %}
+{% endblock project_edit_content_header %}
 
 {% block project_edit_content %}
   {% include "projects/partials/edit/domain_list.html" with objects=object_list %}
-{% endblock %}
+  {% block project_edit_content %}
 
-{% block project_edit_sidebar_help_topics %}
-  {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/guides/custom-domains.html" text="How to manage custom domains" is_external=True class="item" %}
-  {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/subprojects.html" text="Subprojects: host multiple projects on a single domain" is_external=True class="item" %}
-  {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/guides/technical-docs-seo-guide.html#canonical-urls" text="Canonical URLs and domains" is_external=True class="item" %}
-{% endblock project_edit_sidebar_help_topics %}
+    {% block project_edit_sidebar_help_topics %}
+      {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/guides/custom-domains.html" text="How to manage custom domains" is_external=True class="item" %}
+      {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/subprojects.html" text="Subprojects: host multiple projects on a single domain" is_external=True class="item" %}
+      {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/guides/technical-docs-seo-guide.html#canonical-urls" text="Canonical URLs and domains" is_external=True class="item" %}
+    {% endblock project_edit_sidebar_help_topics %}
