--- a/readthedocsext/theme/templates/projects/domain_list.html
+++ b/readthedocsext/theme/templates/projects/domain_list.html
@@ -14,11 +14,23 @@
 {% endblock project_edit_content_header %}
 
 {% block project_edit_content %}
-  {% include "projects/partials/edit/domain_list.html" with objects=object_list %}
-  {% block project_edit_content %}
+  {% comment %}
+    Conditionally show this block if feature is enabled for organization. The
+    ``enabled`` variable comes from the view.
 
-    {% block project_edit_sidebar_help_topics %}
-      {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/guides/custom-domains.html" text="How to manage custom domains" is_external=True class="item" %}
-      {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/subprojects.html" text="Subprojects: host multiple projects on a single domain" is_external=True class="item" %}
-      {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/guides/technical-docs-seo-guide.html#canonical-urls" text="Canonical URLs and domains" is_external=True class="item" %}
-    {% endblock project_edit_sidebar_help_topics %}
+    If the feature is enabled the top menu child blocks below will show. Otherwise
+    overriding the ``top_menu`` block causes these blocks to not render.
+  {% endcomment %}
+  {% if not enabled %}
+    {% include "organizations/includes/feature_disabled.html" with project=project plan="Advanced" %}
+  {% endif %}
+  <div class="{% if not enabled %}ui basic fitted disabled segment{% endif %}">
+    {% include "projects/partials/edit/domain_list.html" with objects=object_list %}
+  </div>
+{% endblock project_edit_content %}
+
+{% block project_edit_sidebar_help_topics %}
+  {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/guides/custom-domains.html" text="How to manage custom domains" is_external=True class="item" %}
+  {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/subprojects.html" text="Subprojects: host multiple projects on a single domain" is_external=True class="item" %}
+  {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/guides/technical-docs-seo-guide.html#canonical-urls" text="Canonical URLs and domains" is_external=True class="item" %}
+{% endblock project_edit_sidebar_help_topics %}
