--- a/readthedocsext/theme/templates/projects/traffic_analytics.html
+++ b/readthedocsext/theme/templates/projects/traffic_analytics.html
@@ -13,7 +13,18 @@
 {% endblock project_edit_content_header %}
 
 {% block project_edit_content %}
-  <div data-bind="using: ProjectTrafficAnalyticsView()">
+  {% comment %}
+    Conditionally show this block if feature is enabled for organization. The
+    ``enabled`` variable comes from the view.
+
+    If the feature is enabled the top menu child blocks below will show. Otherwise
+    overriding the ``top_menu`` block causes these blocks to not render.
+  {% endcomment %}
+  {% if not enabled %}
+    {% include "organizations/includes/feature_disabled.html" with project=project plan="Advanced" %}
+  {% endif %}
+  <div class="{% if not enabled %}ui basic fitted disabled segment{% endif %}"
+       data-bind="using: ProjectTrafficAnalyticsView()">
 
     {% include "projects/partials/edit/traffic_list.html" with objects=top_pages_200 %}
 
