--- a/readthedocsext/theme/templates/organizations/includes/feature_disabled.html
+++ b/readthedocsext/theme/templates/organizations/includes/feature_disabled.html
@@ -1,13 +1,20 @@
-{% load i18n %}
+{% load blocktrans from i18n %}
 
 {# We need to handle both cases, when an organization or a project are given. #}
 {% firstof organization.slug project.organizations.first.slug as organization_slug %}
-{% url 'subscription_detail' organization_slug  as subscription_url %}
+{% url "subscription_detail" organization_slug as subscription_url %}
 
-<div class="ui warning message">
-  <i class="fad fa-exclamation-circle"></i>
-  {% blocktrans trimmed with subscription_url=subscription_url %}
-    This feature is not available for your organization.
-    <a href="{{ subscription_url }}">Upgrade your subscription</a> to enable this feature.
-  {% endblocktrans %}
+<div class="ui notification info message">
+  <h5 class="header">
+    <i class="fad fa-circle-up icon"></i>
+    {% blocktrans trimmed with plan=plan|default:"Pro" %}
+      {{ plan }} plan feature
+    {% endblocktrans %}
+  </h5>
+  <p>
+    {% blocktrans trimmed with subscription_url=subscription_url %}
+      This feature is not available for your organization.
+      <a href="{{ subscription_url }}">Upgrade your subscription</a> to enable this feature.
+    {% endblocktrans %}
+  </p>
 </div>
