--- a/readthedocsext/theme/templates/projects/traffic_analytics.html
+++ b/readthedocsext/theme/templates/projects/traffic_analytics.html
@@ -1,22 +1,36 @@
 {% extends "projects/edit_base.html" %}
 
-{% load i18n %}
-{% load static %}
+{% load trans from i18n %}
 
-{% block title %}{% trans "Traffic Analytics" %}{% endblock %}
-{% block project_traffic_analytics_active %}active{% endblock %}
-{% block project_edit_content_header %}{% trans "Traffic Analytics" %}{% endblock %}
+{% block title %}
+  {% trans "Traffic Analytics" %}
+{% endblock title %}
+{% block project_traffic_analytics_active %}
+  active
+{% endblock project_traffic_analytics_active %}
+{% block project_edit_content_header %}
+  {% trans "Traffic Analytics" %}
+{% endblock project_edit_content_header %}
 
 {% block project_edit_content %}
-  <div data-bind="using: ProjectTrafficAnalyticsView()">
+  {% comment %}
+    Conditionally show this block if feature is enabled for organization. The
+    ``enabled`` variable comes from the view.
+
+    If the feature is enabled the top menu child blocks below will show. Otherwise
+    overriding the ``top_menu`` block causes these blocks to not render.
+  {% endcomment %}
+  {% if not enabled %}
+    {% include "organizations/includes/feature_disabled.html" with project=project plan="Advanced" %}
+  {% endif %}
+  <div class="{% if not enabled %}ui basic fitted disabled segment{% endif %}"
+       data-bind="using: ProjectTrafficAnalyticsView()">
 
     {% include "projects/partials/edit/traffic_list.html" with objects=top_pages_200 %}
 
     <h3 class="ui small header">
       {% trans "Overview" %}
-      <div class="sub header">
-        {% trans "For the last month" %}
-      </div>
+      <div class="sub header">{% trans "For the last month" %}</div>
     </h3>
 
     <div class="ui loading segment" data-bind="css: {loading: is_loading()}">
@@ -53,14 +67,12 @@
 
     <h3 class="ui small header">
       {% trans "Not found pages (404)" %}
-      <div class="sub header">
-        {% trans "For the last month" %}
-      </div>
+      <div class="sub header">{% trans "For the last month" %}</div>
     </h3>
     {% include "projects/partials/edit/traffic_list.html" with objects=top_pages_404 %}
 
   </div>
-{% endblock %}
+{% endblock project_edit_content %}
 
 {% block project_edit_sidebar_help_topics %}
   {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/analytics.html" text="How to use traffic analytics" is_external=True class="item" %}
