Avoid using next, rely on application context data instead
- Requires https://github.com/readthedocs/readthedocs-corporate/pull/1882

--- a/readthedocsext/theme/templates/acl/shared_password_required.html
+++ b/readthedocsext/theme/templates/acl/shared_password_required.html
@@ -24,12 +24,9 @@
     {{ form|crispy }}
 
     <div class="ui stackable relaxed text menu">
-      {% comment %}
-        Using the `next` query param here is hopefully safe. It restarts the
-        login workflow, where just linking to the login form or production
-        domain both do not. Both of these link to a slightly different form.
-      {% endcomment %}
-      <a class="item" href="{{ request.GET.next }}">{% trans "Try using another method" %}</a>
+      {% if login_url %}
+        <a class="item" href="{{ login_url }}">{% trans "Try using another method" %}</a>
+      {% endif %}
       <div class="right menu">
         <button class="ui primary button" type="submit">{% trans "Log in" %}</button>
       </div>
