Fix issues with build detail page debug mode
This slightly alters the logic to always respect whether debug mode is
enabled. To allow linking to a debug line, debug mode is automatically
enabled when linking to a debug command line.

--- a/readthedocsext/theme/templates/builds/build_detail.html
+++ b/readthedocsext/theme/templates/builds/build_detail.html
@@ -264,7 +264,7 @@
               </td>
             </tr>
           </tbody>
-          <tbody data-bind="visible: is_expanded(), foreach: output_lines">
+          <tbody data-bind="visible: (is_visible() || $parent.show_debug()) && is_expanded(), foreach: output_lines">
             <tr data-bind="css: {'left olive marked': is_selected()}"
                 class="top aligned">
               <td class="collapsing line number">
